fix: show logo text on mobile view

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -371,15 +371,10 @@
         font-size: 1.8rem;
     }
 
-    /* Logo */
-    .logo span {
-        display: none;
-        /* Hide text on very small screens */
-    }
-
     .logo img {
         height: 5.5rem;
     }
+
 
     /* Hero Section */
     /* Hero Section */
